Lots of progress on creating atlas from scratch

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -91,10 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b6548580",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37\n"
+     ]
+    }
+   ],
    "source": [
     "atlas_all = list_coms('Atlas')\n",
     "allen_all = list_coms('Allen')\n",
@@ -106,12 +122,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d5ab7c07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "10\n",
+      "2\n",
+      "35\n",
+      "37\n"
+     ]
+    }
+   ],
    "source": [
-    "base_keys = ['LRt_L', 'LRt_R', 'SC', 'SNC_R', 'SNC_L']\n",
+    "base_keys = ['LRt_L', 'LRt_R', 'SC', 'IC']\n",
     "test_keys = ['PBG_L', 'PBG_R', 'SC', 'IC', '4N_L', '4N_R', 'LRt_L','LRt_R', 'SNC_L', 'SNC_R', ]\n",
     "bad_keys = ['RtTg','AP']\n",
     "good_keys = set(common_keys) - set(bad_keys)\n",
@@ -124,35 +152,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ec1aac4f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "atlas_src = np.array([atlas_all[s] for s in base_keys])\n",
-    "allen_src = np.array([allen_all[s] for s in base_keys])\n",
-    "matrix = compute_affine_transformation(atlas_src, allen_src)"
+    "atlas_src = np.array([atlas_all[s] for s in common_keys])\n",
+    "allen_src = np.array([allen_all[s] for s in common_keys])\n",
+    "transformation_matrix = compute_affine_transformation(atlas_src, allen_src)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8860c495",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMS 33.975761229303586\n"
+     ]
+    }
+   ],
    "source": [
     "df_list = []\n",
     "error = []\n",
+    "transformed_dict = {}\n",
     "for structure in common_keys:\n",
     "    atlas0 = np.array(atlas_all[structure])\n",
     "    allen0 = np.array(allen_all[structure]) \n",
-    "    transformed = apply_affine_transform(atlas0, matrix)\n",
+    "    transformed = apply_affine_transform(atlas0, transformation_matrix)\n",
     "    transformed = [round(x,4) for x in transformed]\n",
     "    difference = [round(a - b,4) for a, b in zip(transformed, allen0)]\n",
     "    ss = sum_square_com(difference)\n",
     "    row = [structure, atlas0, allen0, transformed, difference, ss]\n",
     "    df_list.append(row)\n",
     "    error.append(ss)\n",
+    "    transformed_dict[structure] = transformed\n",
     "print('RMS', sum(error)/len(df_list))\n",
     "# test keys RMS 25.61709479307028\n",
     "# base keys RMS 25.602246865972344"
@@ -160,12 +198,357 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "4fe9d717",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1452.69, 450.61, 299.35)\n",
+      "(914.05, 238.8, 569.25)\n",
+      "[898.8635, 203.1984, 522.3334]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(atlas_all['SC'])\n",
+    "print(allen_all['SC'])\n",
+    "print(transformed_dict['SC'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "9d3a9a9a",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>structure</th>\n",
+       "      <th>atlas0</th>\n",
+       "      <th>allen0</th>\n",
+       "      <th>transformed</th>\n",
+       "      <th>difference</th>\n",
+       "      <th>sumsquares</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>3N_L</td>\n",
+       "      <td>[1458.26, 654.04, 383.0]</td>\n",
+       "      <td>[910.25, 379.44, 552.1]</td>\n",
+       "      <td>[933.2391, 410.524, 582.4545]</td>\n",
+       "      <td>[22.9891, 31.084, 30.3545]</td>\n",
+       "      <td>49.153936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3N_R</td>\n",
+       "      <td>[1455.48, 657.74, 409.48]</td>\n",
+       "      <td>[910.34, 379.4, 586.44]</td>\n",
+       "      <td>[931.8736, 417.2835, 612.2853]</td>\n",
+       "      <td>[21.5336, 37.8835, 25.8453]</td>\n",
+       "      <td>50.663942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4N_L</td>\n",
+       "      <td>[1509.51, 673.42, 373.87]</td>\n",
+       "      <td>[958.86, 377.78, 543.25]</td>\n",
+       "      <td>[981.7216, 419.8577, 570.7318]</td>\n",
+       "      <td>[22.8616, 42.0777, 27.4818]</td>\n",
+       "      <td>55.212634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4N_R</td>\n",
+       "      <td>[1504.34, 675.34, 420.22]</td>\n",
+       "      <td>[958.68, 377.48, 595.29]</td>\n",
+       "      <td>[978.4454, 427.2636, 623.7593]</td>\n",
+       "      <td>[19.7654, 49.7836, 28.4693]</td>\n",
+       "      <td>60.659533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5N_L</td>\n",
+       "      <td>[1535.97, 800.03, 266.74]</td>\n",
+       "      <td>[1019.3, 528.65, 409.16]</td>\n",
+       "      <td>[1019.9651, 529.0378, 425.0681]</td>\n",
+       "      <td>[0.6651, 0.3878, 15.9081]</td>\n",
+       "      <td>15.926719</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5N_R</td>\n",
+       "      <td>[1528.87, 769.24, 524.36]</td>\n",
+       "      <td>[1019.34, 528.55, 729.28]</td>\n",
+       "      <td>[1015.641, 525.7388, 728.315]</td>\n",
+       "      <td>[-3.699, -2.8112, -0.965]</td>\n",
+       "      <td>4.745173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6N_L</td>\n",
+       "      <td>[1610.33, 824.44, 366.92]</td>\n",
+       "      <td>[1077.12, 521.48, 529.09]</td>\n",
+       "      <td>[1092.5415, 550.2688, 539.9328]</td>\n",
+       "      <td>[15.4215, 28.7888, 10.8428]</td>\n",
+       "      <td>34.411974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6N_R</td>\n",
+       "      <td>[1608.12, 825.93, 435.35]</td>\n",
+       "      <td>[1077.14, 521.46, 609.41]</td>\n",
+       "      <td>[1092.4014, 558.95, 618.7141]</td>\n",
+       "      <td>[15.2614, 37.49, 9.3041]</td>\n",
+       "      <td>41.532839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7N_L</td>\n",
+       "      <td>[1583.58, 944.2, 287.95]</td>\n",
+       "      <td>[1085.27, 677.54, 434.0]</td>\n",
+       "      <td>[1082.6825, 664.6672, 425.6416]</td>\n",
+       "      <td>[-2.5875, -12.8728, -8.3584]</td>\n",
+       "      <td>15.564928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7N_R</td>\n",
+       "      <td>[1598.73, 919.87, 513.56]</td>\n",
+       "      <td>[1085.26, 677.53, 704.52]</td>\n",
+       "      <td>[1098.469, 660.698, 691.7123]</td>\n",
+       "      <td>[13.209, -16.832, -12.8077]</td>\n",
+       "      <td>24.936541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7n_L</td>\n",
+       "      <td>[1557.65, 835.3, 279.16]</td>\n",
+       "      <td>[1068.7, 548.28, 470.61]</td>\n",
+       "      <td>[1044.5063, 561.2183, 434.0332]</td>\n",
+       "      <td>[-24.1937, 12.9383, -36.5768]</td>\n",
+       "      <td>45.723047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7n_R</td>\n",
+       "      <td>[1563.84, 813.2, 472.32]</td>\n",
+       "      <td>[1068.81, 548.19, 667.75]</td>\n",
+       "      <td>[1051.7524, 557.7367, 661.7533]</td>\n",
+       "      <td>[-17.0576, 9.5467, -5.9967]</td>\n",
+       "      <td>20.446555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>AP</td>\n",
+       "      <td>[1797.13, 859.77, 390.16]</td>\n",
+       "      <td>[1265.32, 501.05, 569.21]</td>\n",
+       "      <td>[1265.8674, 555.2369, 568.9819]</td>\n",
+       "      <td>[0.5474, 54.1869, -0.2281]</td>\n",
+       "      <td>54.190145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Amb_L</td>\n",
+       "      <td>[1687.67, 961.34, 296.14]</td>\n",
+       "      <td>[1188.31, 661.78, 432.36]</td>\n",
+       "      <td>[1178.8073, 664.457, 436.7846]</td>\n",
+       "      <td>[-9.5027, 2.677, 4.4246]</td>\n",
+       "      <td>10.818721</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Amb_R</td>\n",
+       "      <td>[1683.58, 921.79, 530.05]</td>\n",
+       "      <td>[1188.11, 661.77, 706.19]</td>\n",
+       "      <td>[1175.4419, 649.6631, 714.3329]</td>\n",
+       "      <td>[-12.6681, -12.1069, 8.1429]</td>\n",
+       "      <td>19.322645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>DC_L</td>\n",
+       "      <td>[1646.62, 784.04, 184.19]</td>\n",
+       "      <td>[1127.03, 500.2, 322.9]</td>\n",
+       "      <td>[1115.3515, 486.0755, 337.5615]</td>\n",
+       "      <td>[-11.6785, -14.1245, 14.6615]</td>\n",
+       "      <td>23.470161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>DC_R</td>\n",
+       "      <td>[1637.33, 727.25, 574.9]</td>\n",
+       "      <td>[1127.09, 500.2, 815.64]</td>\n",
+       "      <td>[1108.7656, 470.899, 799.3682]</td>\n",
+       "      <td>[-18.3244, -29.301, -16.2718]</td>\n",
+       "      <td>38.198216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>IC</td>\n",
+       "      <td>[1570.51, 467.54, 294.43]</td>\n",
+       "      <td>[1040.0, 232.5, 567.5]</td>\n",
+       "      <td>[1006.9939, 199.1143, 518.9804]</td>\n",
+       "      <td>[-33.0061, -33.3857, -48.5196]</td>\n",
+       "      <td>67.514141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>LC_L</td>\n",
+       "      <td>[1589.49, 733.68, 316.26]</td>\n",
+       "      <td>[1070.96, 427.8, 473.2]</td>\n",
+       "      <td>[1060.3745, 459.5895, 496.8373]</td>\n",
+       "      <td>[-10.5855, 31.7895, 23.6373]</td>\n",
+       "      <td>41.004232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>LC_R</td>\n",
+       "      <td>[1586.63, 720.58, 475.64]</td>\n",
+       "      <td>[1070.99, 427.85, 665.22]</td>\n",
+       "      <td>[1059.8775, 463.1315, 683.4365]</td>\n",
+       "      <td>[-11.1125, 35.2815, 18.2165]</td>\n",
+       "      <td>41.232424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>LRt_L</td>\n",
+       "      <td>[1744.96, 990.68, 294.39]</td>\n",
+       "      <td>[1234.44, 699.06, 439.27]</td>\n",
+       "      <td>[1234.2392, 683.2793, 432.0692]</td>\n",
+       "      <td>[-0.2008, -15.7807, -7.2008]</td>\n",
+       "      <td>17.347113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>LRt_R</td>\n",
+       "      <td>[1736.84, 951.41, 507.94]</td>\n",
+       "      <td>[1234.4, 699.09, 699.26]</td>\n",
+       "      <td>[1226.7966, 667.4182, 685.8314]</td>\n",
+       "      <td>[-7.6034, -31.6718, -13.4286]</td>\n",
+       "      <td>35.231263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>PBG_L</td>\n",
+       "      <td>[1501.27, 650.11, 217.83]</td>\n",
+       "      <td>[940.29, 384.43, 355.11]</td>\n",
+       "      <td>[967.4196, 382.7729, 394.0894]</td>\n",
+       "      <td>[27.1296, -1.6571, 38.9794]</td>\n",
+       "      <td>47.520046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>PBG_R</td>\n",
+       "      <td>[1492.47, 618.04, 569.85]</td>\n",
+       "      <td>[940.07, 384.63, 783.33]</td>\n",
+       "      <td>[963.6668, 387.9403, 806.6829]</td>\n",
+       "      <td>[23.5968, 3.3103, 23.3529]</td>\n",
+       "      <td>33.363528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>RtTg</td>\n",
+       "      <td>[1429.79, 833.13, 365.98]</td>\n",
+       "      <td>[950.34, 532.18, 569.23]</td>\n",
+       "      <td>[931.3016, 589.7153, 528.9823]</td>\n",
+       "      <td>[-19.0384, 57.5353, -40.2477]</td>\n",
+       "      <td>72.750593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SC</td>\n",
+       "      <td>[1452.69, 450.61, 299.35]</td>\n",
+       "      <td>[914.05, 238.8, 569.25]</td>\n",
+       "      <td>[898.8635, 203.1984, 522.3334]</td>\n",
+       "      <td>[-15.1865, -35.6016, -46.9166]</td>\n",
+       "      <td>60.821633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SNC_L</td>\n",
+       "      <td>[1344.41, 735.11, 266.66]</td>\n",
+       "      <td>[835.41, 512.47, 429.36]</td>\n",
+       "      <td>[838.9369, 498.1211, 427.9559]</td>\n",
+       "      <td>[3.5269, -14.3489, -1.4041]</td>\n",
+       "      <td>14.842555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SNC_R</td>\n",
+       "      <td>[1330.81, 710.94, 501.11]</td>\n",
+       "      <td>[835.58, 512.26, 709.22]</td>\n",
+       "      <td>[829.0987, 500.129, 702.9032]</td>\n",
+       "      <td>[-6.4813, -12.131, -6.3168]</td>\n",
+       "      <td>15.135071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SNR_L</td>\n",
+       "      <td>[1357.14, 725.13, 245.49]</td>\n",
+       "      <td>[844.07, 516.73, 403.17]</td>\n",
+       "      <td>[848.5354, 484.012, 405.8628]</td>\n",
+       "      <td>[4.4654, -32.718, 2.6928]</td>\n",
+       "      <td>33.130930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SNR_R</td>\n",
+       "      <td>[1342.36, 693.72, 500.9]</td>\n",
+       "      <td>[844.04, 516.72, 735.35]</td>\n",
+       "      <td>[837.1669, 481.2016, 706.3133]</td>\n",
+       "      <td>[-6.8731, -35.5184, -29.0367]</td>\n",
+       "      <td>46.388858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sp5C_L</td>\n",
+       "      <td>[1824.25, 909.21, 246.86]</td>\n",
+       "      <td>[1283.25, 589.6, 398.0]</td>\n",
+       "      <td>[1293.458, 584.8496, 395.5056]</td>\n",
+       "      <td>[10.208, -4.7504, -2.4944]</td>\n",
+       "      <td>11.532198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sp5I_L</td>\n",
+       "      <td>[1752.43, 889.91, 221.73]</td>\n",
+       "      <td>[1210.65, 587.17, 374.78]</td>\n",
+       "      <td>[1225.66, 575.7033, 366.6412]</td>\n",
+       "      <td>[15.01, -11.4667, -8.1388]</td>\n",
+       "      <td>20.567581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sp5I_R</td>\n",
+       "      <td>[1751.88, 839.04, 558.15]</td>\n",
+       "      <td>[1210.65, 587.2, 763.77]</td>\n",
+       "      <td>[1226.4243, 559.4194, 764.9782]</td>\n",
+       "      <td>[15.7743, -27.7806, 1.2082]</td>\n",
+       "      <td>31.969517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sp5O_L</td>\n",
+       "      <td>[1629.47, 865.34, 223.71]</td>\n",
+       "      <td>[1113.89, 591.19, 378.68]</td>\n",
+       "      <td>[1111.8085, 572.8679, 367.7431]</td>\n",
+       "      <td>[-2.0815, -18.3221, -10.9369]</td>\n",
+       "      <td>21.439398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sp5O_R</td>\n",
+       "      <td>[1625.51, 816.62, 556.72]</td>\n",
+       "      <td>[1113.85, 591.31, 759.76]</td>\n",
+       "      <td>[1109.7127, 558.9417, 761.5894]</td>\n",
+       "      <td>[-4.1373, -32.3683, 1.8294]</td>\n",
+       "      <td>32.682882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>VLL_L</td>\n",
+       "      <td>[1456.93, 747.63, 242.33]</td>\n",
+       "      <td>[946.43, 517.56, 388.99]</td>\n",
+       "      <td>[941.24, 488.6737, 402.7078]</td>\n",
+       "      <td>[-5.19, -28.8863, 13.7178]</td>\n",
+       "      <td>32.396488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>VLL_R</td>\n",
+       "      <td>[1444.93, 734.2, 537.76]</td>\n",
+       "      <td>[946.51, 517.38, 749.54]</td>\n",
+       "      <td>[935.7529, 507.0549, 746.3163]</td>\n",
+       "      <td>[-10.7571, -10.3251, -3.2237]</td>\n",
+       "      <td>15.255004</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "columns = ['structure', 'atlas0', 'allen0', 'transformed', 'difference', 'sumsquares']\n",
     "df = pd.DataFrame(df_list, columns=columns)\n",
@@ -176,56 +559,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2af81b8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33.97576122930359"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['sumsquares'].sum()/len(df.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a253d3ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "949.4215777978649/len(df.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70f667af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_list = []\n",
-    "atlas_src = np.array([atlas_all[s] for s in remaining_keys])\n",
-    "for structure in remaining_keys:\n",
-    "    atlas0 = np.array(atlas_all[structure])\n",
-    "    allen0 = 0\n",
-    "    transformed = apply_affine_transform(atlas0, matrix)\n",
-    "    transformed = [round(x,2) for x in transformed]\n",
-    "    difference = 0\n",
-    "    ss = 0\n",
-    "    row = [structure, atlas0, allen0, transformed, difference, ss]\n",
-    "    df_list.append(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f0679a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns = ['structure', 'atlas0', 'allen0', 'transformed', 'difference', 'sumsquares']\n",
-    "df = pd.DataFrame(df_list, columns=columns)\n",
-    "df.index.name = 'Index'\n",
-    "df.sort_values(by=['structure'], inplace=True)\n",
-    "HTML(df.to_html(index=False))"
    ]
   }
  ],
