--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -35,10 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "299762ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost Version: 2.1.4\n"
+     ]
+    }
+   ],
    "source": [
     "from library.controller.sql_controller import SqlController\n",
     "from library.image_manipulation.filelocation_manager import FileLocationManager\n",
@@ -51,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -68,10 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b6548580",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37\n"
+     ]
+    }
+   ],
    "source": [
     "atlas_all = list_coms('AtlasV8')\n",
     "allen_all = list_coms('Allen')\n",
@@ -83,10 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "88ba5a47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#good_keys=35\n"
+     ]
+    }
+   ],
    "source": [
     "# these keys have very high errors: 'RtTg', 'AP'\n",
     "bad_keys = ('RtTg', 'AP')\n",
@@ -96,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ec1aac4f",
    "metadata": {},
    "outputs": [],
@@ -108,10 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8860c495",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMS 279.17948586355334\n"
+     ]
+    }
+   ],
    "source": [
     "df_list = []\n",
     "error = []\n",
@@ -135,10 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4e7b269b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Atlas SC [12301.  3296. 11713.]\n",
+      "Allen SC [9140. 2388. 5692.]\n",
+      "Atlas transformed SC [9229. 2108. 5737.]\n"
+     ]
+    }
+   ],
    "source": [
     "structure = 'SC'\n",
     "print(f'Atlas {structure} {np.round(np.array(atlas_all[structure]))}')\n",
@@ -148,12 +198,335 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9d3a9a9a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>structure</th>\n",
+       "      <th>atlas0</th>\n",
+       "      <th>allen0</th>\n",
+       "      <th>transformed</th>\n",
+       "      <th>difference</th>\n",
+       "      <th>sumsquares</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>VLL_L</td>\n",
+       "      <td>[12399.0, 7668.0, 8910.0]</td>\n",
+       "      <td>[9464.0, 5176.0, 3890.0]</td>\n",
+       "      <td>[9462.0, 5209.0, 3907.0]</td>\n",
+       "      <td>[-2.0, 34.0, 17.0]</td>\n",
+       "      <td>37.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5N_R</td>\n",
+       "      <td>[13204.0, 7489.0, 14973.0]</td>\n",
+       "      <td>[10193.0, 5286.0, 7293.0]</td>\n",
+       "      <td>[10107.0, 5289.0, 7288.0]</td>\n",
+       "      <td>[-86.0, 3.0, -5.0]</td>\n",
+       "      <td>86.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>PBG_L</td>\n",
+       "      <td>[12479.0, 5943.0, 8238.0]</td>\n",
+       "      <td>[9403.0, 3844.0, 3551.0]</td>\n",
+       "      <td>[9423.0, 3869.0, 3645.0]</td>\n",
+       "      <td>[20.0, 25.0, 94.0]</td>\n",
+       "      <td>99.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>PBG_R</td>\n",
+       "      <td>[12344.0, 5419.0, 15855.0]</td>\n",
+       "      <td>[9401.0, 3846.0, 7833.0]</td>\n",
+       "      <td>[9429.0, 3919.0, 7897.0]</td>\n",
+       "      <td>[28.0, 73.0, 64.0]</td>\n",
+       "      <td>101.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SNC_R</td>\n",
+       "      <td>[10682.0, 6683.0, 14458.0]</td>\n",
+       "      <td>[8356.0, 5123.0, 7092.0]</td>\n",
+       "      <td>[8321.0, 5039.0, 7023.0]</td>\n",
+       "      <td>[-35.0, -84.0, -70.0]</td>\n",
+       "      <td>114.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5N_L</td>\n",
+       "      <td>[13336.0, 7839.0, 9357.0]</td>\n",
+       "      <td>[10193.0, 5287.0, 4092.0]</td>\n",
+       "      <td>[10123.0, 5220.0, 4155.0]</td>\n",
+       "      <td>[-70.0, -67.0, 64.0]</td>\n",
+       "      <td>115.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sp5I_R</td>\n",
+       "      <td>[16145.0, 8905.0, 15791.0]</td>\n",
+       "      <td>[12107.0, 5872.0, 7638.0]</td>\n",
+       "      <td>[12216.0, 5948.0, 7688.0]</td>\n",
+       "      <td>[110.0, 76.0, 51.0]</td>\n",
+       "      <td>142.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3N_L</td>\n",
+       "      <td>[12061.0, 5624.0, 11761.0]</td>\n",
+       "      <td>[9102.0, 3794.0, 5521.0]</td>\n",
+       "      <td>[9177.0, 3889.0, 5612.0]</td>\n",
+       "      <td>[74.0, 94.0, 91.0]</td>\n",
+       "      <td>150.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>LRt_R</td>\n",
+       "      <td>[16363.0, 10247.0, 14765.0]</td>\n",
+       "      <td>[12344.0, 6991.0, 6993.0]</td>\n",
+       "      <td>[12414.0, 6862.0, 7037.0]</td>\n",
+       "      <td>[70.0, -129.0, 44.0]</td>\n",
+       "      <td>153.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>LRt_L</td>\n",
+       "      <td>[16468.0, 10648.0, 10217.0]</td>\n",
+       "      <td>[12344.0, 6991.0, 4393.0]</td>\n",
+       "      <td>[12432.0, 6894.0, 4493.0]</td>\n",
+       "      <td>[88.0, -96.0, 100.0]</td>\n",
+       "      <td>164.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3N_R</td>\n",
+       "      <td>[12045.0, 5631.0, 12330.0]</td>\n",
+       "      <td>[9103.0, 3794.0, 5864.0]</td>\n",
+       "      <td>[9175.0, 3928.0, 5927.0]</td>\n",
+       "      <td>[72.0, 134.0, 63.0]</td>\n",
+       "      <td>164.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SNC_L</td>\n",
+       "      <td>[10844.0, 6999.0, 9736.0]</td>\n",
+       "      <td>[8354.0, 5125.0, 4294.0]</td>\n",
+       "      <td>[8371.0, 4989.0, 4388.0]</td>\n",
+       "      <td>[17.0, -136.0, 94.0]</td>\n",
+       "      <td>165.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sp5I_L</td>\n",
+       "      <td>[16284.0, 9527.0, 8592.0]</td>\n",
+       "      <td>[12107.0, 5872.0, 3748.0]</td>\n",
+       "      <td>[12225.0, 5995.0, 3661.0]</td>\n",
+       "      <td>[118.0, 123.0, -87.0]</td>\n",
+       "      <td>191.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7N_R</td>\n",
+       "      <td>[14237.0, 9425.0, 14708.0]</td>\n",
+       "      <td>[10853.0, 6775.0, 7045.0]</td>\n",
+       "      <td>[10908.0, 6565.0, 7031.0]</td>\n",
+       "      <td>[56.0, -210.0, -14.0]</td>\n",
+       "      <td>217.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>DC_L</td>\n",
+       "      <td>[14930.0, 7734.0, 7542.0]</td>\n",
+       "      <td>[11270.0, 5002.0, 3229.0]</td>\n",
+       "      <td>[11188.0, 4800.0, 3176.0]</td>\n",
+       "      <td>[-83.0, -202.0, -53.0]</td>\n",
+       "      <td>224.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7n_R</td>\n",
+       "      <td>[14055.0, 7783.0, 13606.0]</td>\n",
+       "      <td>[10688.0, 5482.0, 6677.0]</td>\n",
+       "      <td>[10685.0, 5304.0, 6522.0]</td>\n",
+       "      <td>[-3.0, -178.0, -155.0]</td>\n",
+       "      <td>236.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7N_L</td>\n",
+       "      <td>[14271.0, 9739.0, 10039.0]</td>\n",
+       "      <td>[10853.0, 6775.0, 4340.0]</td>\n",
+       "      <td>[10870.0, 6537.0, 4424.0]</td>\n",
+       "      <td>[18.0, -238.0, 84.0]</td>\n",
+       "      <td>253.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>IC</td>\n",
+       "      <td>[13940.0, 3693.0, 11271.0]</td>\n",
+       "      <td>[10400.0, 2325.0, 5675.0]</td>\n",
+       "      <td>[10371.0, 2133.0, 5487.0]</td>\n",
+       "      <td>[-29.0, -192.0, -188.0]</td>\n",
+       "      <td>270.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6N_L</td>\n",
+       "      <td>[14049.0, 8156.0, 11447.0]</td>\n",
+       "      <td>[10771.0, 5215.0, 5291.0]</td>\n",
+       "      <td>[10664.0, 5465.0, 5303.0]</td>\n",
+       "      <td>[-107.0, 250.0, 12.0]</td>\n",
+       "      <td>271.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>DC_R</td>\n",
+       "      <td>[14805.0, 6945.0, 16458.0]</td>\n",
+       "      <td>[11271.0, 5002.0, 8156.0]</td>\n",
+       "      <td>[11209.0, 4722.0, 8166.0]</td>\n",
+       "      <td>[-62.0, -280.0, 9.0]</td>\n",
+       "      <td>287.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Amb_L</td>\n",
+       "      <td>[15310.0, 10012.0, 9843.0]</td>\n",
+       "      <td>[11883.0, 6618.0, 4324.0]</td>\n",
+       "      <td>[11597.0, 6573.0, 4311.0]</td>\n",
+       "      <td>[-286.0, -45.0, -13.0]</td>\n",
+       "      <td>290.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SC</td>\n",
+       "      <td>[12301.0, 3296.0, 11713.0]</td>\n",
+       "      <td>[9140.0, 2388.0, 5692.0]</td>\n",
+       "      <td>[9229.0, 2108.0, 5737.0]</td>\n",
+       "      <td>[89.0, -280.0, 44.0]</td>\n",
+       "      <td>296.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4N_L</td>\n",
+       "      <td>[12511.0, 5961.0, 11558.0]</td>\n",
+       "      <td>[9589.0, 3778.0, 5432.0]</td>\n",
+       "      <td>[9500.0, 4062.0, 5484.0]</td>\n",
+       "      <td>[-89.0, 284.0, 52.0]</td>\n",
+       "      <td>301.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6N_R</td>\n",
+       "      <td>[14052.0, 8102.0, 12910.0]</td>\n",
+       "      <td>[10771.0, 5215.0, 6094.0]</td>\n",
+       "      <td>[10688.0, 5505.0, 6116.0]</td>\n",
+       "      <td>[-84.0, 290.0, 22.0]</td>\n",
+       "      <td>303.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Amb_R</td>\n",
+       "      <td>[15211.0, 9605.0, 14911.0]</td>\n",
+       "      <td>[11881.0, 6618.0, 7062.0]</td>\n",
+       "      <td>[11592.0, 6564.0, 7144.0]</td>\n",
+       "      <td>[-290.0, -54.0, 83.0]</td>\n",
+       "      <td>305.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sp5C_L</td>\n",
+       "      <td>[17327.0, 9914.0, 9326.0]</td>\n",
+       "      <td>[12833.0, 5896.0, 3980.0]</td>\n",
+       "      <td>[12974.0, 6166.0, 4056.0]</td>\n",
+       "      <td>[142.0, 270.0, 76.0]</td>\n",
+       "      <td>314.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4N_R</td>\n",
+       "      <td>[12464.0, 5926.0, 12556.0]</td>\n",
+       "      <td>[9587.0, 3775.0, 5953.0]</td>\n",
+       "      <td>[9482.0, 4098.0, 6039.0]</td>\n",
+       "      <td>[-104.0, 323.0, 86.0]</td>\n",
+       "      <td>349.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SNR_R</td>\n",
+       "      <td>[11190.0, 6592.0, 14842.0]</td>\n",
+       "      <td>[8440.0, 5167.0, 7353.0]</td>\n",
+       "      <td>[8673.0, 4915.0, 7247.0]</td>\n",
+       "      <td>[233.0, -252.0, -106.0]</td>\n",
+       "      <td>359.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sp5O_L</td>\n",
+       "      <td>[15166.0, 8855.0, 8614.0]</td>\n",
+       "      <td>[11139.0, 5912.0, 3787.0]</td>\n",
+       "      <td>[11422.0, 5662.0, 3702.0]</td>\n",
+       "      <td>[283.0, -250.0, -85.0]</td>\n",
+       "      <td>386.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>LC_L</td>\n",
+       "      <td>[13827.0, 7000.0, 10366.0]</td>\n",
+       "      <td>[10710.0, 4278.0, 4732.0]</td>\n",
+       "      <td>[10438.0, 4574.0, 4774.0]</td>\n",
+       "      <td>[-272.0, 296.0, 42.0]</td>\n",
+       "      <td>404.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>LC_R</td>\n",
+       "      <td>[13796.0, 6774.0, 13775.0]</td>\n",
+       "      <td>[10710.0, 4279.0, 6652.0]</td>\n",
+       "      <td>[10461.0, 4598.0, 6677.0]</td>\n",
+       "      <td>[-248.0, 319.0, 25.0]</td>\n",
+       "      <td>405.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sp5O_R</td>\n",
+       "      <td>[15134.0, 8328.0, 15658.0]</td>\n",
+       "      <td>[11138.0, 5913.0, 7598.0]</td>\n",
+       "      <td>[11490.0, 5662.0, 7639.0]</td>\n",
+       "      <td>[351.0, -251.0, 41.0]</td>\n",
+       "      <td>433.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SNR_L</td>\n",
+       "      <td>[11362.0, 6883.0, 9218.0]</td>\n",
+       "      <td>[8441.0, 5167.0, 4032.0]</td>\n",
+       "      <td>[8714.0, 4795.0, 4114.0]</td>\n",
+       "      <td>[273.0, -372.0, 83.0]</td>\n",
+       "      <td>468.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>VLL_R</td>\n",
+       "      <td>[12219.0, 7717.0, 15083.0]</td>\n",
+       "      <td>[9465.0, 5174.0, 7495.0]</td>\n",
+       "      <td>[9441.0, 5614.0, 7322.0]</td>\n",
+       "      <td>[-24.0, 440.0, -173.0]</td>\n",
+       "      <td>473.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7n_L</td>\n",
+       "      <td>[13846.0, 8643.0, 9726.0]</td>\n",
+       "      <td>[10687.0, 5483.0, 4706.0]</td>\n",
+       "      <td>[10520.0, 5764.0, 4315.0]</td>\n",
+       "      <td>[-167.0, 281.0, -391.0]</td>\n",
+       "      <td>510.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>RtTg</td>\n",
+       "      <td>[12311.0, 8293.0, 12080.0]</td>\n",
+       "      <td>[9503.0, 5322.0, 5692.0]</td>\n",
+       "      <td>[9483.0, 5865.0, 5623.0]</td>\n",
+       "      <td>[-21.0, 543.0, -70.0]</td>\n",
+       "      <td>547.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>AP</td>\n",
+       "      <td>[16501.0, 8912.0, 12040.0]</td>\n",
+       "      <td>[12653.0, 5010.0, 5692.0]</td>\n",
+       "      <td>[12401.0, 5692.0, 5613.0]</td>\n",
+       "      <td>[-252.0, 681.0, -79.0]</td>\n",
+       "      <td>730.60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "columns = ['structure', 'atlas0', 'allen0', 'transformed', 'difference', 'sumsquares']\n",
     "df = pd.DataFrame(df_list, columns=columns)\n",
@@ -165,10 +538,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2af81b8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "279.17891891891895"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['sumsquares'].sum()/len(df.index)\n",
     "# 259.96675675675675\n",
@@ -177,10 +561,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b98874cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMS 100 keys remove=34keys, error=337.38\n",
+      "RMS 125 keys remove=31keys, error=297.27\n",
+      "RMS 150 keys remove=30keys, error=284.45\n",
+      "RMS 175 keys remove=25keys, error=287.96\n",
+      "RMS 200 keys remove=24keys, error=285.86\n",
+      "RMS 225 keys remove=22keys, error=283.44\n",
+      "RMS 250 keys remove=21keys, error=283.74\n",
+      "RMS 275 keys remove=18keys, error=283.85\n",
+      "RMS 300 keys remove=15keys, error=286.02\n",
+      "RMS 325 keys remove=11keys, error=282.34\n",
+      "RMS 350 keys remove=10keys, error=281.49\n",
+      "RMS 375 keys remove=9keys, error=280.67\n",
+      "RMS 400 keys remove=8keys, error=280.62\n",
+      "RMS 425 keys remove=6keys, error=279.32\n",
+      "RMS 450 keys remove=5keys, error=279.7\n",
+      "RMS 475 keys remove=3keys, error=279.27\n",
+      "RMS 500 keys remove=3keys, error=279.27\n",
+      "RMS 525 keys remove=2keys, error=279.18\n"
+     ]
+    }
+   ],
    "source": [
     "for threshold in range(100,550, 25):\n",
     "    good_keys = df.query(f'sumsquares < {threshold}')['structure']\n",
